src/objects/Partner_Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <label>Customer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Date_2_days_for_SR_Closure__c</fullName>
        <description>This field will calculate that the escalation date for closure of SRs is 2 days after it has been last modified i.e. the SR has been executed</description>
        <formula>LastModifiedDate + 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalation Date 2 days for SR Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Esclation_Date_30_days__c</fullName>
        <formula>LastModifiedDate +30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Esclation Date 30 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Esclation_Date_45_days__c</fullName>
        <formula>LastModifiedDate + 45</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Esclation Date 45 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Esclation_Date_5_days__c</fullName>
        <formula>LastModifiedDate +5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Esclation Date 5 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Esclation_Date__c</fullName>
        <formula>LastModifiedDate + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Esclation Date 10 days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Model__c</fullName>
        <label>Product Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Approved__c</fullName>
        <label>Quantity Approved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_No__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;&amp; Id,
CASE($RecordType.Name , &apos;Financial Service Request&apos; , &apos;FIN&apos;,&apos;Closed Financial&apos; , &apos;FIN&apos;, 
&apos;General Complaints&apos;   , &apos;MAR&apos;, &apos;Closed General Complaints&apos;   , &apos;MAR&apos;,
&apos;Marketing Material Request&apos;   , &apos;MM&apos;, &apos;Closed Marketing Material Request&apos;   , &apos;MM&apos;,
&apos;Product Complaint &apos; , &apos;SERV&apos; ,&apos;Closed Product Complaints&apos; , &apos;SERV&apos; ,&apos;&apos;)  &amp;  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Request No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Of_Complaint__c</fullName>
        <label>Type Of Complaint</label>
        <picklist>
            <picklistValues>
                <fullName>SYSTEM NOT WORKING ON MAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEM NOT WORKING ON BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAINS MCB TRIPPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC MCB TRIPPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUSE BLOWN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUSE BROKEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services / Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_Of_Request__c</fullName>
        <label>Type Of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding – Ageing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Statement (Overall)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque Bounce Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Financial Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Our product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services / Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP - Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP - Leaflet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP - Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP - Z Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP - Danglers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP - Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP - Collaterals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoP - CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Certificates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Requests</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Service Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <recordTypes>
        <fullName>Closed_Financial</fullName>
        <active>true</active>
        <label>Closed Financial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_General_Complaints</fullName>
        <active>true</active>
        <label>Closed General Complaints</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Marketing_Material_Request</fullName>
        <active>true</active>
        <label>Closed Marketing Material Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Product_Complaints</fullName>
        <active>true</active>
        <label>Closed Product Complaints</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Service_Request</fullName>
        <active>true</active>
        <label>Financial Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Information_Complaints</fullName>
        <active>true</active>
        <label>General Information / Complaints</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Material_Request</fullName>
        <active>true</active>
        <label>Marketing Material Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Complaint</fullName>
        <active>true</active>
        <label>Product Complaint</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Financial_Request_Date</fullName>
        <active>true</active>
        <errorConditionFormula>From__c   &gt;  TODAY() ||  To__c    &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Date Specified should not be more than Today&apos;s Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SR_Status_Change_Restriction_CRM_User_Ac</fullName>
        <active>true</active>
        <description>This validation is being used to ensure that the CRM user cannot change the status after a Service Request has been &quot;Executed&quot;</description>
        <errorConditionFormula>AND ((OR ($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;PRM User CRM&quot;)), (ISCHANGED (Status__c)), (OR (ISPICKVAL(Status__c, &apos;Open&apos;), ISPICKVAL(Status__c, &apos;Closed&apos;))))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The Su-Kam CRM can only maintain the status as EXECUTED</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SR_Status_Change_Restriction_on_Partner</fullName>
        <active>true</active>
        <description>This validation will ensure that the SR status cannot be changed to OPEN after it has been EXECUTED / CLOSED</description>
        <errorConditionFormula>AND (OR ($Profile.Name = &apos;Sukam Partner User&apos;, $Profile.Name = &apos;Dummy - Partner Profile&apos; ), ISCHANGED (Status__c), ISPICKVAL(Status__c, &apos;Open&apos;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The Service Request cannot be OPENED once it has been EXECUTED / CLOSED</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>To_date_has_to_be_after_From_date</fullName>
        <active>true</active>
        <description>&apos;To&apos; date cannot be before from date</description>
        <errorConditionFormula>To__c   &lt;   From__c</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>The &apos;To&apos; date cannot be before the &apos;From&apos; date. Please check</errorMessage>
    </validationRules>
</CustomObject>